--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
