--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-google-autocomplete": "^2.4.2",
     "react-places-autocomplete": "^7.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
